--- a/src/layouts/Dashboard.astro
+++ b/src/layouts/Dashboard.astro
@@ -70,7 +70,7 @@ const { title } = Astro.props;
         console.log("proof script is running")
 
         // so if you add "await" to stop execution until it is complete, normally
-        ///////////////////////////////// now the script won't run anyways if you add it
+        // now the script won't run anyways if you add it
         // wizard type sheit, i got my phd im shenanigans from hogwards school of detroit
 
         // edit 2:14a.m. I think something is seriously wrong with this projects
