--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,6 @@ import Box from '../components/Pages/Login.astro';
     <span>
         <div id="Login" class="sanchez-regular">
             Login
-            <img src="https://raw.githubusercontent.com/Parlier-NJROTC/Assets/main/Other/NJROTC-Seal.svg" style="top:130%; position:absolute; width: 80px; height: 80px;">
         </div>
         <form id="The-Login-Form">
             <div class="login-form">
@@ -111,8 +110,13 @@ import Box from '../components/Pages/Login.astro';
         button:hover {
             transform: scale(1.05); 
             box-shadow: 15px 15px 20px rgba(0,0,0,0.19), 0 10px 10px rgba(0,0,0,0.23);
-        }    
+        }   
+        button:active{
+            transform: scale(.90); 
+            box-shadow: 0px 0px 0px rgba(0,0,0,0);
+        } 
     #Login {
+            margin-top: 50px;
             padding: 10px;
             position: relative;
             font-size: 50px;
@@ -144,12 +148,13 @@ import Box from '../components/Pages/Login.astro';
             align-items: start;
             border-radius: 10px;
 
-            box-shadow: 0 0 1rem #0003;
+            box-shadow: 0 0 1rem #0003,8px 8px 0px #0003;
             background-color: #ffffff26;
             backdrop-filter: blur(5px);
         }
 
         .login-form {
+            margin-bottom: 50px;
             display: grid;
             grid-template-columns: 1fr;
             gap: 10px;
