--- a/src/layouts/Dashboard.astro
+++ b/src/layouts/Dashboard.astro
@@ -1,6 +1,5 @@
 ---
 import Link from "../components/menu/Link.astro";
-import Setting from '../components/menu/Setting.astro';
 import Fvfer from '../components/SmalCompents/Line.astro';
 import "./Dashboard.css";
 
@@ -43,7 +42,7 @@ const { title } = Astro.props;
             <div class="dropdown-content" style="display: none;">
                 <a href="/Dashboard/NewPassword">New Password</a>
                 <a href="#DarkMode" id="darkModeLink">Dark Mode</a>
-                <a id="Logout">Logout</a>
+                <a id="Logout" onclick="location.reload();window.localStorage.clear();">Logout</a>
             </div>
         </div>
     </header>
@@ -77,7 +76,7 @@ const { title } = Astro.props;
 
         if(localStorage.getItem("Token") == "" || localStorage.getItem("Token") == null){
             console.log("not logged in, returing to to login")
-            window.location.href = "/dashboard"
+            window.location.href = "/Dashboard/"
         }
         fetch("http://localhost:8080/api/alpha/v1/home/info",{
             method:"GET",
@@ -112,6 +111,7 @@ const { title } = Astro.props;
             }
             
         })
+
     </script>
 </body>
 <style>
@@ -125,7 +125,6 @@ const { title } = Astro.props;
         background-color: #f9f9f9;
         min-width: 400px;
         box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-        z-index: 1;
     }
 
     .dropdown-content a {
@@ -141,6 +140,7 @@ const { title } = Astro.props;
     body.light-mode {
         background-color: white;
         color: black;
+        --img-invert:0%;
       }
 
       /* Dark mode styles */
@@ -150,6 +150,7 @@ const { title } = Astro.props;
         --top-nav-bg-color:rgb(255, 255, 255);
         --nav-bg-color:rgb(255, 255, 255);
         --nav-txt-color:rgb(0, 0, 0);
+        --img-invert:100%;
       }
       body.dark-mode img{
         filter: invert(100%);
