--- a/src/components/Pages/Login.astro
+++ b/src/components/Pages/Login.astro
@@ -87,13 +87,13 @@
        .input-group input[type="password"] {
           width: 100%;
           height: 40px;
-          outline: none; /* Remove default focus border */
+          outline: none; 
         }
 
        .input-text-large {
             font-size: 24px;
         }
-        /* Ensures the custom focus style is visible against the background */
+       
        .input-group input[type="text"],
        .input-group input[type="password"] {
           background-color: whitesmoke;
