--- a/src/components/ReQestMenu/ItemMenu.astro
+++ b/src/components/ReQestMenu/ItemMenu.astro
@@ -52,8 +52,14 @@ structure, I wont question
 
     for(let i in ribbons){
         let box = document.createElement("div")
-        box.innerText = i
         box.className = "a-ribbon-listing" // werid name so that no one will use
+            let ribbon = document.createElement("img")
+            ribbon.src = "/Dashboard/ribbons/"+i+".png"
+            box.appendChild(ribbon)
+
+            let ribbon_name = document.createElement("span")
+            ribbon_name.innerText = i
+            box.appendChild(ribbon_name)
         document.getElementById("ribbon-listings")?.appendChild(box)
     }
 </script>
@@ -64,6 +70,7 @@ structure, I wont question
         width:200px;
         height: 200px;
         display:flex;
+        flex-direction: column;
         text-align: center;
         justify-content: center;
         align-items: center;
