--- a/src/layouts/Dashboard.astro
+++ b/src/layouts/Dashboard.astro
@@ -148,9 +148,10 @@ const { title } = Astro.props;
         filter: invert(100%);
         color: rgb(0, 0, 0);
         --top-nav-bg-color:rgb(255, 255, 255);
-        --nav-bg-color:rgb(255, 255, 255);
+        --nav-bg-color:#f0f0f0;
         --nav-txt-color:rgb(0, 0, 0);
         --img-invert:100%;
+        --dropdown-textcolor:#bead91;
       }
       body.dark-mode img{
         filter: invert(100%);
