--- a/src/layouts/Dashboard.astro
+++ b/src/layouts/Dashboard.astro
@@ -87,7 +87,8 @@ const { title } = Astro.props;
         }).then((res)=>{
             if(res.status != 200){
                 console.log("an error occured, returning to login")
-                window.location.href = "/Dashboard/"
+                // stopping redirects for development
+                //window.location.href = "/Dashboard/"
             }
             console.log("sup")
             console.log("Fortnite")
