getting hosting to work properly in aaa

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import { API_URL } from 'astro:env/client';
 ---
 
 <Layout title="Login">
-    <div id="Status"><!-- Uncomment for place holder: Error 404: Lorem Ipsum --></div>
+    <div id="Status"><!-- Uncomment for place holder: Error 404: Lorem Ipsum --> aa</div>
     <a id="hiddenRedirectionBecauseAstroOnlyDoesThisNow" href="/Dashboard/Home" style="display: none;">this is supposed to be hidden</a>
     <span>
         <div id="Login" class="sanchez-regular">
@@ -39,10 +39,8 @@ import { API_URL } from 'astro:env/client';
 </script>
 <!-- screw this im setting the default language to js -->
 <script lang="js" define:vars={{API_URL}}>
-    //login()
 
-import { API_URL } from "astro:env/client";
-
+    console.log("work pls")
     /**
      * @type {HTMLFormElement}
      */
@@ -88,7 +86,7 @@ import { API_URL } from "astro:env/client";
         var x = document.getElementById("password");
         var showIcon = document.querySelector('.hide-icon');
         var hideIcon = document.querySelector('.show-icon');
-        
+
         if (x.type === "password") {
             x.type = "text";
             showIcon.style.display = 'block';
