Revert "Dark mode Fixes"
This reverts commit 173490dd53e73f82de17d82206f5c145a07af05e.

--- a/src/layouts/Dashboard.astro
+++ b/src/layouts/Dashboard.astro
@@ -152,10 +152,9 @@ import { API_URL } from 'astro:env/client';
         filter: invert(100%);
         color: rgb(0, 0, 0);
         --top-nav-bg-color:rgb(255, 255, 255);
-        --nav-bg-color:#f0f0f0;
+        --nav-bg-color:rgb(255, 255, 255);
         --nav-txt-color:rgb(0, 0, 0);
         --img-invert:100%;
-        --dropdown-textcolor:#bead91;
       }
       body.dark-mode img{
         filter: invert(100%);
